Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.3.0 Beta2
-
None
Description
There seems to be a regression in Qt Quick Controls 2.
This is the stack trace:
Qt6QuickTemplates2d.dll!qBound<double>(const double & min, const double & val, const double & max) Line 1023 C++ Qt6QuickTemplates2d.dll!QQuickScrollBarPrivate::visualArea() Line 171 C++ Qt6QuickTemplates2d.dll!QQuickScrollBarPrivate::resizeContent() Line 252 C++ Qt6QuickTemplates2d.dll!QQuickScrollBar::setPosition(double position) Line 475 C++ Qt6QuickTemplates2d.dll!QQuickScrollBar::qt_static_metacall(QObject * _o, QMetaObject::Call _c, int _id, void * * _a) Line 241 C++ Qt6Cored.dll!doActivate<0>(QObject * sender, int signal_index, void * * argv) Line 3933 C++ Qt6Cored.dll!QMetaObject::activate(QObject * sender, const QMetaObject * m, int local_signal_index, void * * argv) Line 3979 C++ Qt6Quickd.dll!QQuickFlickableVisibleArea::xPositionChanged(double _t1) Line 217 C++ Qt6Quickd.dll!QQuickFlickableVisibleArea::updateVisible() Line 177 C++ Qt6Quickd.dll!QQuickFlickablePrivate::updateBeginningEnd() Line 604 C++ Qt6Quickd.dll!QQuickFlickable::viewportMoved(QFlags<enum Qt::Orientation> orient) Line 1876 C++ Qt6Quickd.dll!QQuickListView::viewportMoved(QFlags<enum Qt::Orientation> orient) Line 3384 C++ Qt6Quickd.dll!QQuickFlickablePrivate::itemGeometryChanged(QQuickItem * item, QQuickGeometryChange change, const QRectF & __formal) Line 346 C++ Qt6Quickd.dll!QQuickItemViewPrivate::itemGeometryChanged(QQuickItem * item, QQuickGeometryChange change, const QRectF & oldGeometry) Line 1170 C++ Qt6Quickd.dll!QQuickListViewPrivate::itemGeometryChanged(QQuickItem * item, QQuickGeometryChange change, const QRectF & oldGeometry) Line 1584 C++ Qt6Quickd.dll!QQuickItem::geometryChange::__l2::<lambda>(const QQuickItemPrivate::ChangeListener & listener) Line 3792 C++ Qt6Quickd.dll!QQuickItemPrivate::notifyChangeListeners<void <lambda>(const QQuickItemPrivate::ChangeListener &)>(QFlags<enum QQuickItemPrivate::ChangeType> changeTypes, QQuickItem::geometryChange::__l2::void <lambda>(const QQuickItemPrivate::ChangeListener &) && function) Line 387 C++ Qt6Quickd.dll!QQuickItem::geometryChange(const QRectF & newGeometry, const QRectF & oldGeometry) Line 3796 C++ Qt6Quickd.dll!QQuickItem::setX(double v) Line 6938 C++ Qt6Quickd.dll!QQuickFlickablePrivate::setViewportX(double x) Line 1776 C++ Qt6Quickd.dll!QQuickTimeLineValueProxy<QQuickFlickablePrivate>::setValue(double v) Line 188 C++ Qt6Quickd.dll!QQuickFlickable::setContentX(double pos) Line 807 C++ Qt6Quickd.dll!QQuickListViewPrivate::setPosition(double pos) Line 515 C++ Qt6Quickd.dll!QQuickItemViewPrivate::positionViewAtIndex(int index, int mode) Line 927 C++ Qt6Quickd.dll!QQuickItemView::positionViewAtEnd() Line 959 C++ Qt6Quickd.dll!QQuickItemView::qt_static_metacall(QObject * _o, QMetaObject::Call _c, int _id, void * * _a) Line 520 C++ Qt6Quickd.dll!QQuickItemView::qt_metacall(QMetaObject::Call _c, int _id, void * * _a) Line 898 C++ Qt6Quickd.dll!QQuickListView::qt_metacall(QMetaObject::Call _c, int _id, void * * _a) Line 630 C++ Qt6Qmld.dll!QQmlVMEMetaObject::metaCall(QObject * o, QMetaObject::Call c, int _id, void * * a) Line 1033 C++ Qt6Cored.dll!QMetaObject::metacall(QObject * object, QMetaObject::Call cl, int idx, void * * argv) Line 319 C++ Qt6Qmld.dll!QQmlObjectOrGadget::metacall(QMetaObject::Call type, int index, void * * argv) Line 51 C++ Qt6Qmld.dll!CallMethod(const QQmlObjectOrGadget & object, int index, QMetaType returnType, int argCount, const QMetaType * argTypes, QV4::ExecutionEngine * engine, QV4::CallData * callArgs, QMetaObject::Call callType) Line 1424 C++ Qt6Qmld.dll!CallPrecise(const QQmlObjectOrGadget & object, const QQmlPropertyData & data, QV4::ExecutionEngine * engine, QV4::CallData * callArgs, QMetaObject::Call callType) Line 1671 C++ Qt6Qmld.dll!QV4::QObjectMethod::callInternal::__l2::<lambda>() Line 2343 C++ Qt6Qmld.dll!<lambda_657cc18542143512c6492e582a8beac5>::operator()<unsigned __int64 <lambda>(void)>(const QV4::QObjectMethod::callInternal::__l2::unsigned __int64 <lambda>(void) & call) Line 2322 C++ Qt6Qmld.dll!QV4::QObjectMethod::callInternal(const QV4::Value * thisObject, const QV4::Value * argv, int argc) Line 2343 C++ Qt6Qmld.dll!QV4::QObjectMethod::virtualCall(const QV4::FunctionObject * m, const QV4::Value * thisObject, const QV4::Value * argv, int argc) Line 2281 C++ Qt6Qmld.dll!QV4::FunctionObject::call(const QV4::Value * thisObject, const QV4::Value * argv, int argc) Line 206 C++ Qt6Qmld.dll!QV4::FunctionObject::call(const QV4::JSCallData & data) Line 133 C++ Qt6Qmld.dll!QQmlDelayedCallQueue::DelayedFunctionCall::execute(QV4::ExecutionEngine * engine) Line 79 C++ Qt6Qmld.dll!QQmlDelayedCallQueue::executeAllExpired_Later() Line 207 C++ Qt6Qmld.dll!QQmlDelayedCallQueue::ticked() Line 215 C++ Qt6Qmld.dll!QQmlDelayedCallQueue::qt_static_metacall(QObject * _o, QMetaObject::Call _c, int _id, void * * _a) Line 74 C++ Qt6Cored.dll!QMetaCallEvent::placeMetaCall(QObject * object) Line 626 C++ Qt6Cored.dll!QObject::event(QEvent * e) Line 1355 C++ Qt6Widgetsd.dll!QApplicationPrivate::notify_helper(QObject * receiver, QEvent * e) Line 3337 C++ Qt6Widgetsd.dll!QApplication::notify(QObject * receiver, QEvent * e) Line 3288 C++ Qt6Cored.dll!QCoreApplication::notifyInternal2(QObject * receiver, QEvent * event) Line 1067 C++ Qt6Cored.dll!QCoreApplication::sendEvent(QObject * receiver, QEvent * event) Line 1484 C++ Qt6Cored.dll!QCoreApplicationPrivate::sendPostedEvents(QObject * receiver, int event_type, QThreadData * data) Line 1847 C++ Qt6Cored.dll!QEventDispatcherWin32::sendPostedEvents() Line 906 C++ Qt6Guid.dll!QWindowsGuiEventDispatcher::sendPostedEvents() Line 80 C++ Qt6Cored.dll!QEventDispatcherWin32::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 476 C++ Qt6Guid.dll!QWindowsGuiEventDispatcher::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 72 C++ Qt6Cored.dll!QEventLoop::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 137 C++ Qt6Cored.dll!QEventLoop::exec(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 218 C++ Qt6Cored.dll!QCoreApplication::exec() Line 1388 C++ Qt6Guid.dll!QGuiApplication::exec() Line 1864 C++
Attachments
Issue Links
- is required for
-
QDS-6323 QDS crashes when build with Qt 6.3 Beta
-
- Withdrawn
-